# Pipeline

./: .buildinfo  .buildinfo.bak  .gitignore  404.html  CHANGELOG.md  CITATION.cff  LICENSE  LogData.csv  Pipeline_Flowchart.md  Pipeline_Timeline.md  README.md  SubsetComposition.md  USE_CODE_PIPELINE.md  data.html  genindex.html  index.html  log_data 2.csv  log_data.csv  log_data_20240802_172904.csv  log_data_20240802_175037.csv  log_data_20240802_175620.csv  log_data_20240802_175914.csv  log_data_20240802_180718.csv  log_data_20240805_113436.csv  log_data_20240805_121019.csv  log_data_20240805_121231.csv  log_data_20240805_130756.csv  log_data_20240807_122528.csv  log_data_20240807_125437.csv  main_page.html  mkdocs.yml  objects.inv  pyproject.toml  python_files.html  quickstart.html  readme.html  requirements.txt  run_pipeline.py  run_pipelineV2.py  search.html  (+5 more)
.doctrees/: data.doctree  environment.pickle  index.doctree  main_page.doctree  python_files.doctree  quickstart.doctree  readme.doctree  tutorial.doctree
MLModel/: trained_model.joblib
Md_Files/: KNN_UPDATE.md  Pipeline_Timeline.md  START_HERE.md  SubsetComposition.md
Predictions/: Rd_kostenB_1993_0_2024-12-10_14-44-00.csv  Rd_kostenB_1993_0_2024-12-17_15-31-10.csv  Rd_kostenB_1993_0_2025-01-13_15-17-50.csv  ctn0094_relapse_event_0_2024-12-18_16-04-30.csv  predictions_Ab_krupitskyA_2011_42_2024-08-27_13-19-21.csv  predictions_Ab_ling_1998_42_2024-08-27_13-19-37.csv  predictions_Rd_kostenB_1993_2_2024-08-27_14-12-03.csv  predictions_Rd_kostenB_1993_2_2024-08-29_00-04-24.csv  (+9 more)
_sources/: data.rst.txt  (+2 more)
(+209 files in other folders)
